Fix style on mobile and animation in general

--- a/public/global.css
+++ b/public/global.css
@@ -8,8 +8,10 @@
 body {
   display: grid;
   grid-template-rows: 1fr auto;
-  width: 100vw;
+  min-width: 100vw;
+  max-width: 100vw;
   height: 100vh;
+  overflow-x: hidden;
   color: var(--text-color);
   margin: 0;
   padding: 0;
